2012-06-18  Kirit Saelensminde  <kirit@felspar.com>
 Allow us to bypass redirects with the fake HTTP client in the user agent. Useful for testing redirects.

2012-06-14  Kirit Saelensminde  <kirit@felspar.com>
 Added a create member to the mock models on the mock client.
 If the client instance is not given an explicit `pk` member then we will try to build its URL from the `id` member if it has that.
 Fixed a bug where mock instances were not found for some configurations.

2012-06-07  Kirit Saelensminde  <kirit@felspar.com>
 The mock client model method `get` now returns an instance proxy as it should (when it can). If there isn't enough information to build a proper instance URL then it will continue to return the mock instance directly.
 Have had to change the URL scheme for the operation URLs in the mock client from slumber: to http: as Python's urlparse.urljoin won't work otherwise. Have also changed the instance operations to include the primary key (if given).

2012-06-05  Kirit Saelensminde  <kirit@felspar.com>
 Make sure that if a URL is used in a query directly it is properly converted to a Slumber URL as appropriate.

2012-05-31  Kirit Saelensminde  <kirit@felspar.com>
 The mock client now uses the same model type constructor as the real client. This means that proxies are properly applied.
 The mock `get` method now tries to convert both values to unicode and if they compare then it will accept that. This avoids a problem where strings wouldn't compare properly with numbers.
 When instances are fetched from a remote service the mock client is checked first to see if it is already holding the instance. If it is then it is used.
 Added a new `mock_ua` test decorator that can be used to set expectations for the user agent so that proxies (and other communication with the Slumber user agent) can be much more easily tested.